--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>IEDV</title>
 </head>
 <header>
     <nav id="header" role="navigation">
-      <a id="logo" href="#"><img id="imglogoh" src="images/Logo IEDV -01 cinza.png" alt="logo"></a>
+      <a id="logo" href="#"><img id="imglogoh" src="Logo IEDV -01 cinza.png" alt="logo"></a>
         <div id="menuToggle">
           <input id="check" type="checkbox"/>
             <span></span>
@@ -27,7 +27,7 @@
     <main>
         <section id="inicio">
             <video playsinline="" webkit-playsinline="" allowfullscreen="false" autoplay="" muted="" loop="">
-                <source src="videos/videoinicio.mp4" type="video/mp4">
+                <source src="videoinicio.mp4" type="video/mp4">
             </video>
         </section>
         <section id="scroll1">
@@ -77,10 +77,10 @@
     </main>
 </body>
 <footer>
-    <a id="logo" href="#"><img id="imglogof" src="images/Logo IEDV -01 cinza.png" alt="logo"></a>
+    <a id="logo" href="#"><img id="imglogof" src="Logo IEDV -01 cinza.png" alt="logo"></a>
     <div id="media">
-        <a id="instagram" href="https://www.instagram.com/igrejaencontrosdevida/" target="_blank"><img id="instagrami" src="images/instagram.png" alt="instagram"></a>
-        <a id="youtube" href="https://www.youtube.com/@PulseIEDV" target="_blank"><img id="youtubei" src="images/youtube.png" alt="youtube"></a>
+        <a id="instagram" href="https://www.instagram.com/igrejaencontrosdevida/" target="_blank"><img id="instagrami" src="instagram.png" alt="instagram"></a>
+        <a id="youtube" href="https://www.youtube.com/@PulseIEDV" target="_blank"><img id="youtubei" src="youtube.png" alt="youtube"></a>
     </div>
 </footer>
 </html>
