--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <h2>QUEM SOMOS</h2>
             <hr>
             <p>A Igreja Encontros de Vida tem como propósito expandir o reino de Deus por meio do crescimento e multiplicação. Adotamos o modelo de igreja com células, com a visão de “cada crente um ministro e cada casa uma extensão da igreja”.</p>
+            <img class="imagefundo" src="imgscroll1 reduzida.jpg" alt="">
         </section>
         <section id="scroll2">
             <h2>NO QUE CREMOS</h2>
@@ -46,7 +47,7 @@
             <h4>Sapucaia do Sul</h4>
             <p>Quinta-feira - 20h <br>Culto de avivamento</p><br>
             <p>Sábado - 20h <br>Culto de jovens</p><br>
-            <p>Domingo - 20h <br>Culto da família</p><br>
+            <p>Domingo - 20h <br>Culto da família</p>
             <hr>
             <h4>Canoas</h4>
             <p>Quarta-feira - 20h</p>
@@ -72,7 +73,7 @@
             <h3>Argentina</h3>
             <h4>Cidade</h4>
             <p>Endereço</p>
-            <hr>
+            <hr id="lasthr">
         </section>
     </main>
 </body>
