--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
             </video>
         </section>
         <section id="scroll1">
+            <img class="imagefundo" src="danca.jpg" alt="">
             <h2>QUEM SOMOS</h2>
             <hr>
             <p>A Igreja Encontros de Vida tem como propósito expandir o reino de Deus por meio do crescimento e multiplicação. Adotamos o modelo de igreja com células, com a visão de “cada crente um ministro e cada casa uma extensão da igreja”.</p>
-            <img class="imagefundo" src="imgscroll1 reduzida.jpg" alt="">
         </section>
         <section id="scroll2">
+            <img id="maos" class="imagefundo" src="maos.jpg" alt="">
             <h2>NO QUE CREMOS</h2>
             <hr>
             <p>O credo da IEDV é uma declaração de fé que enfatiza a crença em um Deus único, nas escrituras como a autoridade suprema, na divindade de Jesus, na queda do homem e na salvação por meio de Cristo, na importância da santificação e da vida vitoriosa, na natureza da igreja como o corpo de Cristo, na evangelização do mundo, no Batismo nas águas e no Batismo do Espírito Santos, bem como na segunda vinda iminente e literal de Jesus Cristo. Esses princípios fundamentais orientam a fé e prática dos membros desta igreja. </p>
         </section>
         <section id="scroll3">
+            <img id="nata" class="imagefundo" src="nata.jpg" alt="">
             <h2>NOSSOS CULTOS</h2>
             <hr>
             <h4>Sapucaia do Sul</h4>
@@ -56,6 +58,7 @@
             <p>Sexta-feira - 20h</p>
         </section>
         <section id="scroll4">
+            <img id="dinho" class="imagefundo" src="dinho.jpg" alt="">
             <h2>NOSSAS IGREJAS</h2>
             <hr>
             <h3>Rio Grande do Sul</h3>
